<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections_button_text">UPCOMING ELECTIONS</string>
    <string name="find_representatives_button_text">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="office">Office</string>
    <string name="officials_name">Name</string>
    <string name="officials_party">Party</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="my_representatives">My Representatives</string>
    <string name="zip">Zip</string>
    <string name="city">City</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election_button_text">FOLLOW ELECTION</string>
    <string name="unfollow_election_button_text">UNFOLLOW ELECTION</string>

</resources>
