<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representative_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/office_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_image"
            app:layout_constraintTop_toTopOf="@+id/representative_image"
            tools:text="@string/office" />

        <TextView
            android:id="@+id/official_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toStartOf="@+id/office_text"
            app:layout_constraintTop_toBottomOf="@+id/office_text"
            tools:text="@string/officials_name" />

        <TextView
            android:id="@+id/official_party_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/official_name_text"
            app:layout_constraintTop_toBottomOf="@+id/official_name_text"
            tools:text="@string/officials_party" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/twitter_icon"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/facebook_icon"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:srcCompat="@drawable/ic_www" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>